News UAT/force-app/main/default/objects/User/fields/Bypass_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Triggers__c</fullName>
    <description>List of triggers that are selected to be bypassed for this user. Allows triggers to be muted.</description>
    <label>Bypass Triggers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BookingLineItemManagement</fullName>
            </value>
            <value>
                <fullName>SalesOrderManagement</fullName>
            </value>
            <value>
                <fullName>AccountManagement</fullName>
            </value>
            <value>
                <fullName>AccountTeam</fullName>
            </value>
            <value>
                <fullName>AgreementManagement</fullName>
            </value>
            <value>
                <fullName>BookingManagement</fullName>
            </value>
            <value>
                <fullName>CampaignMemberManagement</fullName>
            </value>
            <value>
                <fullName>CaseManagement</fullName>
            </value>
            <value>
                <fullName>CleanUpAccountTeam</fullName>
            </value>
            <value>
                <fullName>ContactManagement</fullName>
            </value>
            <value>
                <fullName>emailAttachmentReassigner</fullName>
            </value>
            <value>
                <fullName>LeadManagement</fullName>
            </value>
            <value>
                <fullName>OpportunityLineItemManagement</fullName>
            </value>
            <value>
                <fullName>OpportunityManagement</fullName>
            </value>
            <value>
                <fullName>PublicationProductManagement</fullName>
            </value>
            <value>
                <fullName>TaskManagement</fullName>
            </value>
            <value>
                <fullName>ActionTask</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>