News UAT/force-app/main/default/objects/User/fields/Delegation_End__c.field-meta.xml
<CustomField>
    <fullName>Delegation_End__c</fullName>
    <label>Delegation End</label>
    <type>Date</type>
</CustomField>