News UAT/force-app/main/default/objects/User/fields/Delegation_Start__c.field-meta.xml
<CustomField>
    <fullName>Delegation_Start__c</fullName>
    <label>Delegation Start</label>
    <type>Date</type>
</CustomField>