News UAT/force-app/main/default/objects/User/fields/Exempt_from_data_validation_rules__c.field-meta.xml
<CustomField>
    <fullName>Exempt_from_data_validation_rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>28/2 JT - Created due to previous bad data from Siebel - allows users to update GBA accounts</description>
    <inlineHelpText>NOTE: This does not exempt from all data validation rules. This only exempts users where the Data Validation rule are using this exception!</inlineHelpText>
    <label>Exempt from data validation rules</label>
    <type>Checkbox</type>
</CustomField>