News UAT/force-app/main/default/objects/User/fields/Is_NewsExtend_Created_User__c.field-meta.xml
<CustomField>
    <fullName>Is_NewsExtend_Created_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The check box will identify whether the User is created by My Account Apex Sharing, for giving the access to external user to my Accounts Community.</description>
    <label>Is NewsExtend Created User</label>
    <type>Checkbox</type>
</CustomField>