News UAT/force-app/main/default/objects/User/fields/Manage_All_Walk_in__c.field-meta.xml
<CustomField>
    <fullName>Manage_All_Walk_in__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This determines whether user has ability to set walk-in forecast for other users.</inlineHelpText>
    <label>Manage All Walk-in</label>
    <type>Checkbox</type>
</CustomField>