News UAT/force-app/main/default/objects/User/fields/Network_Username__c.field-meta.xml
<CustomField>
    <fullName>Network_Username__c</fullName>
    <description>Windows network username, for correlation with other systems (e.g. Genera, Global Viewpoint).</description>
    <externalId>true</externalId>
    <label>Network Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>