News UAT/force-app/main/default/objects/User/fields/News_Xtend_Visibility__c.field-meta.xml
<CustomField>
    <fullName>News_Xtend_Visibility__c</fullName>
    <label>News Xtend Visibility</label>
    <length>100</length>
    <type>Text</type>
</CustomField>