News UAT/force-app/main/default/objects/User/fields/NVMConnect__DiallerLastAutomaticProgression__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__DiallerLastAutomaticProgression__c</fullName>
    <label>Dialler Last Automatic Progression</label>
    <type>DateTime</type>
</CustomField>