News UAT/force-app/main/default/objects/User/fields/NVMConnect__IsActiveOnDialler__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__IsActiveOnDialler__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate that a user is using the dialler.</description>
    <label>Is Active On Dialler</label>
    <type>Checkbox</type>
</CustomField>