News UAT/force-app/main/default/objects/User/fields/NVMConnect__isDiallerUser__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__isDiallerUser__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to track which users consume dialler license</description>
    <inlineHelpText>Check to allocate dialler capability to this user.  They must have a ContactWorld Agent Id as well.</inlineHelpText>
    <label>Can Dial Lists via Connect</label>
    <type>Checkbox</type>
</CustomField>