News UAT/force-app/main/default/objects/User/fields/NVMConnect__ShouldStopOnDiallerAfterCurrentCall__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__ShouldStopOnDiallerAfterCurrentCall__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate that a user should stop on the dialler after the current call.</description>
    <label>Stop on Dialler after Current Call</label>
    <type>Checkbox</type>
</CustomField>