News UAT/force-app/main/default/objects/User/fields/NVMContactWorld__MostRecentCall__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__MostRecentCall__c</fullName>
    <label>Most Recent Call</label>
    <length>128</length>
    <type>Text</type>
</CustomField>