News UAT/force-app/main/default/objects/User/fields/NVMContactWorld__MostRecentCallEventTimestamp__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__MostRecentCallEventTimestamp__c</fullName>
    <description>The timestamp of the most recent call event (deliver, transfer...) that this user has handled</description>
    <label>Most Recent Call Event Timestamp</label>
    <type>DateTime</type>
</CustomField>