News UAT/force-app/main/default/objects/User/fields/NVMContactWorld__MostRecentCallIsActive__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__MostRecentCallIsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Most Recent Call Is Active</label>
    <type>Checkbox</type>
</CustomField>