News UAT/force-app/main/default/objects/User/fields/NVMContactWorld__NotesCollapsed__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__NotesCollapsed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if notes andd additional fields should be collapsed in Log A Call quick action</description>
    <label>Notes Collapsed</label>
    <type>Checkbox</type>
</CustomField>