News UAT/force-app/main/default/objects/User/fields/NVMContactWorld__NVM_Agent_Id__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__NVM_Agent_Id__c</fullName>
    <description>NVM Agent Id for Contact World for Salesforce</description>
    <externalId>true</externalId>
    <inlineHelpText>NVM Agent Id for Contact World for Salesforce. This should be set to the correct NVM Agent Id to make sure that call tasks are assigned to the correct Salesforce user.</inlineHelpText>
    <label>NVM Agent Id</label>
    <length>11</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>