News UAT/force-app/main/default/objects/User/fields/Sales_Team__c.field-meta.xml
<CustomField>
    <fullName>Sales_Team__c</fullName>
    <label>Sales Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Community Newspaper Group - CWA</fullName>
            </value>
            <value>
                <fullName>NewsAdds - Facebook NSW</fullName>
            </value>
            <value>
                <fullName>NewsAdds - Facebook NT</fullName>
            </value>
            <value>
                <fullName>NewsAdds - Facebook QLD</fullName>
            </value>
            <value>
                <fullName>NewsAdds - Facebook SA</fullName>
            </value>
            <value>
                <fullName>NewsAdds - Facebook TAS</fullName>
            </value>
            <value>
                <fullName>NewsAdds - Facebook VIC</fullName>
            </value>
            <value>
                <fullName>NewsAdds - Facebook VIC Geelong</fullName>
            </value>
            <value>
                <fullName>NewsAdds - Facebook WA</fullName>
            </value>
            <value>
                <fullName>NRM</fullName>
            </value>
            <value>
                <fullName>NSW Community</fullName>
            </value>
            <value>
                <fullName>NSW Metro</fullName>
            </value>
            <value>
                <fullName>NT Northern Territory</fullName>
            </value>
            <value>
                <fullName>QLD Cairns</fullName>
            </value>
            <value>
                <fullName>QLD Community</fullName>
            </value>
            <value>
                <fullName>QLD Gold Coast</fullName>
            </value>
            <value>
                <fullName>QLD Metro</fullName>
            </value>
            <value>
                <fullName>QLD Townsville</fullName>
            </value>
            <value>
                <fullName>SA Community</fullName>
            </value>
            <value>
                <fullName>TAS Hobart</fullName>
            </value>
            <value>
                <fullName>The Weekly Times</fullName>
            </value>
            <value>
                <fullName>VIC Community</fullName>
            </value>
            <value>
                <fullName>VIC Geelong</fullName>
            </value>
            <value>
                <fullName>VIC Metro</fullName>
            </value>
            <value>
                <fullName>SA Metro</fullName>
                <isActive>false</isActive>
                <label>SA Metro</label>
            </value>
            <value>
                <fullName>WA CNG</fullName>
                <isActive>false</isActive>
                <label>WA CNG</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>