News UAT/force-app/main/default/objects/User/fields/SDH_Level_1__c.field-meta.xml
<CustomField>
    <fullName>SDH_Level_1__c</fullName>
    <label>Sales Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>