News UAT/force-app/main/default/objects/User/fields/SDH_Level_3__c.field-meta.xml
<CustomField>
    <fullName>SDH_Level_3__c</fullName>
    <label>Sales Office</label>
    <length>255</length>
    <type>Text</type>
</CustomField>