News UAT/force-app/main/default/objects/User/fields/Send_Reminder_Email_For_Login__c.field-meta.xml
<CustomField>
    <fullName>Send_Reminder_Email_For_Login__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will be set to true for the given frequency to send login reminder emails to user</description>
    <label>Send Reminder Email For Login</label>
    <type>Checkbox</type>
</CustomField>