News UAT/force-app/main/default/objects/User/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <description>Further  breakdown of users&#39; division, i.e. Break down VIC to VIC Community and Vic Metro</description>
    <inlineHelpText>Further  breakdown of users&#39; division, i.e. Break down VIC to VIC Community and Vic Metro</inlineHelpText>
    <label>Team</label>
    <length>50</length>
    <type>Text</type>
</CustomField>